<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:windowDrawsSystemBarBackgrounds="true"

    tools:context=".Verify">


    <RelativeLayout
        android:id="@+id/activityTitleLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <TextView
            android:id="@+id/activityTitleText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            android:fontFamily="@font/um"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activityTitleText"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/u"
            android:text="@string/one_more"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickInputLayout"
        style="@style/ti"
        app:boxStrokeColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityTitleLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nick"

        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusTopStart= "0dp"

        android:textColorHint="@color/gray"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/um"
            android:shadowColor="@color/black"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton

        android:id="@+id/VerifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickInputLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/gb"
        android:onClick="verify"
        android:padding="12dp"
        android:text="@string/check_sig_btn_text"

        android:textColor="@color/white"

        app:cornerRadius="0dp"

        app:rippleColor="@android:color/transparent"

        app:strokeColor="#FFFFFF"
        app:strokeWidth="3dp"


        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>