<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <!-- Текст-подсказка: меню -->
    <RelativeLayout
        android:id="@+id/tools_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray6">

        <TextView
            android:id="@+id/amino_tools_header"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sb"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/menu_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/amino_tools_header"
            android:clickable="true"
            android:fontFamily="@font/s"

            android:onClick="toSignature"
            android:paddingStart="20dp"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RelativeLayout>

    <!-- Example -->
    <ScrollView
        android:id="@+id/chat_scroll"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/dataInputLayout1"
        android:layout_below="@+id/tools_header"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/chat_scroll_linear"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataInputLayout1"
        style="@style/ti"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_msg"
        android:textColorHint="@color/gray"

        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusTopStart="0dp"

        app:boxStrokeColor="@color/white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/msginputtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/um"
            android:textColor="#ffffff" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/knopka2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/blue"
            android:fontFamily="@font/gb"
            android:onClick="sendMessage"
            android:padding="12dp"
            android:text="@string/check_sig_btn_text"

            android:textColor="@color/white"

            app:cornerRadius="0dp"

            app:rippleColor="@android:color/transparent"

            app:strokeColor="@color/cyan"
            app:strokeWidth="3dp"


            tools:ignore="DuplicateSpeakableTextCheck" />


    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>